# game-shell-sdk

./: build-gcc.sh  install.sh
cmake/: gcc-clockworkos.cmake  generate-cmake-findpackage.py
cmake/modules/ClockworkOS/0.5/: FindQt5Concurrent.cmake  FindQt5Core.cmake  FindQt5DBus.cmake  FindQt5Gui.cmake  FindQt5Network.cmake  FindQt5OpenGL.cmake  FindQt5OpenGLExtensions.cmake  FindQt5PrintSupport.cmake  FindQt5Sql.cmake  FindQt5Test.cmake  FindQt5Widgets.cmake  FindQt5Xml.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL_gfx.cmake  FindSDL_image.cmake  FindSDL_ttf.cmake  Findalsa.cmake  (+261 more)
docker/: image_list.txt  notes.md  setup-docker.sh
docker/ClockworkOS/0.5/: Dockerfile  clockworkos_v0.5-pkg-list.txt  sources.list
examples/drm-graphics/: CMakeLists.txt  drm-graphics.c
examples/egl-demo/: CMakeLists.txt  egl-demo.c
examples/framebuffer/: CMakeLists.txt  framebuffer.cpp
examples/helloworld/: CMakeLists.txt  helloworld.c
pkgconf/ClockworkOS/0.5/: Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Gui.pc  Qt5Network.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5PrintSupport.pc  Qt5Sql.pc  Qt5Test.pc  Qt5Widgets.pc  Qt5Xml.pc  SDL2_gfx.pc  SDL2_image.pc  SDL_image.pc  avahi-client.pc  dri3proto.pc  egl.pc  formw.pc  gdk-wayland-3.0.pc  gl.pc  glesv1_cm.pc  glesv2.pc  glew.pc  glfw3.pc  gtk+-unix-print-3.0.pc  gtk+-x11-3.0.pc  ibus-1.0.pc  jack.pc  libconfig.pc  libdaemon.pc  libmpeg2.pc  libmpeg2convert.pc  libturbojpeg.pc  libva-drm.pc  libva-egl.pc  libva-glx.pc  libva-tpi.pc  libva-wayland.pc  libva-x11.pc  (+20 more)
sysroot/ClockworkOS/0.5/: usr-local-include.tgz
(+9 files in other folders)
